# serializer version: 1
# name: test_global
  '''
                                                                                  
   Usage: default [OPTIONS] COMMAND [ARGS]...                                     
                                                                                  
   SnowCLI - A CLI for Snowflake                                                  
                                                                                  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --version                                            Prints version of the   │
  │                                                      snowcli                 │
  │ --format                      [TABLE|JSON]           Specifies output format │
  │                                                      [default: TABLE]        │
  │ --config-file                 FILE                   Specifies snowcli       │
  │                                                      configuration file that │
  │                                                      should be used          │
  │                                                      [default: None]         │
  │ --verbose             -v                             Print logs from level   │
  │                                                      info and higher         │
  │ --debug                                              Print logs from level   │
  │                                                      debug and higher, logs  │
  │                                                      contains additional     │
  │                                                      information             │
  │ --install-completion          [bash|zsh|fish|powers  Install completion for  │
  │                               hell|pwsh]             the specified shell.    │
  │                                                      [default: None]         │
  │ --show-completion             [bash|zsh|fish|powers  Show completion for the │
  │                               hell|pwsh]             specified shell, to     │
  │                                                      copy it or customize    │
  │                                                      the installation.       │
  │                                                      [default: None]         │
  │ --help                -h                             Show this message and   │
  │                                                      exit.                   │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Commands ───────────────────────────────────────────────────────────────────╮
  │ configure    Configure an environment to use with your Snowflake connection. │
  │ connection   Manage connection to Snowflake                                  │
  │ login        Select a Snowflake connection to use with SnowCLI.              │
  │ snowpark     Manage functions, procedures and Snowpark objects               │
  │ sql          Executes Snowflake query.                                       │
  │ stage        Manage stages                                                   │
  │ streamlit    Manage Streamlit in Snowflake                                   │
  │ warehouse    Manage warehouses                                               │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
  
  '''
# ---
# name: test_snowpark
  '''
                                                                                  
   Usage: snowpark [OPTIONS] COMMAND [ARGS]...                                    
                                                                                  
   Manage functions, procedures and Snowpark objects                              
                                                                                  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --install-completion          [bash|zsh|fish|powers  Install completion for  │
  │                               hell|pwsh]             the specified shell.    │
  │                                                      [default: None]         │
  │ --show-completion             [bash|zsh|fish|powers  Show completion for the │
  │                               hell|pwsh]             specified shell, to     │
  │                                                      copy it or customize    │
  │                                                      the installation.       │
  │                                                      [default: None]         │
  │ --help                -h                             Show this message and   │
  │                                                      exit.                   │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Commands ───────────────────────────────────────────────────────────────────╮
  │ function        Manage user defined functions                                │
  │ package         Manage custom Python packages for Snowpark                   │
  │ procedure       Manage stored procedures                                     │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
  
  '''
# ---
# name: test_stage
  '''
                                                                                  
   Usage: stage [OPTIONS] COMMAND [ARGS]...                                       
                                                                                  
   Manage stages                                                                  
                                                                                  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --install-completion          [bash|zsh|fish|powers  Install completion for  │
  │                               hell|pwsh]             the specified shell.    │
  │                                                      [default: None]         │
  │ --show-completion             [bash|zsh|fish|powers  Show completion for the │
  │                               hell|pwsh]             specified shell, to     │
  │                                                      copy it or customize    │
  │                                                      the installation.       │
  │                                                      [default: None]         │
  │ --help                -h                             Show this message and   │
  │                                                      exit.                   │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Commands ───────────────────────────────────────────────────────────────────╮
  │ create      Create stage if not exists                                       │
  │ drop        Drop stage                                                       │
  │ get         Download files from a stage to a local client                    │
  │ list        List stage contents                                              │
  │ put         Upload files to a stage from a local client                      │
  │ remove      Remove file from stage                                           │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
  
  '''
# ---
# name: test_streamlit
  '''
                                                                                  
   Usage: root [OPTIONS] COMMAND [ARGS]...                                        
                                                                                  
   Manage Streamlit in Snowflake                                                  
                                                                                  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --install-completion          [bash|zsh|fish|powers  Install completion for  │
  │                               hell|pwsh]             the specified shell.    │
  │                                                      [default: None]         │
  │ --show-completion             [bash|zsh|fish|powers  Show completion for the │
  │                               hell|pwsh]             specified shell, to     │
  │                                                      copy it or customize    │
  │                                                      the installation.       │
  │                                                      [default: None]         │
  │ --help                -h                             Show this message and   │
  │                                                      exit.                   │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Commands ───────────────────────────────────────────────────────────────────╮
  │ create           Create a streamlit app named NAME.                          │
  │ deploy           Deploy streamlit with NAME.                                 │
  │ describe         Describe a streamlit app.                                   │
  │ drop             Create a streamlit app named NAME.                          │
  │ list             List streamlit apps.                                        │
  │ share            Create a streamlit app named NAME.                          │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
  
  '''
# ---
# name: test_warehouse
  '''
                                                                                  
   Usage: status [OPTIONS]                                                        
                                                                                  
   Show the status of each warehouse in the configured environment.               
                                                                                  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --environment                 TEXT                   Environment name        │
  │                                                      [default: dev]          │
  │ --install-completion          [bash|zsh|fish|powers  Install completion for  │
  │                               hell|pwsh]             the specified shell.    │
  │                                                      [default: None]         │
  │ --show-completion             [bash|zsh|fish|powers  Show completion for the │
  │                               hell|pwsh]             specified shell, to     │
  │                                                      copy it or customize    │
  │                                                      the installation.       │
  │                                                      [default: None]         │
  │ --help                -h                             Show this message and   │
  │                                                      exit.                   │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
  
  '''
# ---
